# desktop-automation

./: .gitignore  LICENSE  README.md  example  pyproject.toml
src/automaton/: options.py  webdriver.py
tests/: notepad.py
